# gittree

./: .gitignore  CHANGELOG.md  Cargo.toml  FINAL_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/gittree/: main.go
docs/: INSTALL.md  USAGE.md  example-config.yml
internal/config/: config.go
internal/git/: repository.go  repository_test.go
internal/ui/: app.go.bak  simple_app.go
src/: app.rs  config.rs  git.rs  lib.rs  main.rs  simple_ui.rs  ui.rs
